@@ -1,18 +1,18 @@
-4e5405baa7ca27d0b36899fc03504211 *ChangeLog
-ad9b37c90fbdecc173dd3b0dae56bce5 *DESCRIPTION
-c68440094a549ea64ce6ac5040d8dd43 *NAMESPACE
+8cff9ddb3dd13c64c48db65518b0765a *ChangeLog
+cd5aca461792e96994b95abb9700d33b *DESCRIPTION
+39ecb1a489addb6d296172b6e51ca1be *NAMESPACE
 c4d5b7bbb5d3983cca5e56e6205fb59a *R/dataQuality.R
 e38e174f435b9e6c68b31331d937ac7c *R/densityTree.R
-55d8d2ef9d1f11435792f3a9e6a71b98 *R/forestDataGen.R
+e95b53f5d8824b046b17d3c68164352e *R/forestDataGen.R
 cc465730db1714b20f44229cfaa26932 *R/init.R
-5c409956502bf7189223e9c9a3bcb45f *R/misc.R
-ed63e75d42891cf7557cb344b55ac788 *R/rbfDataGen.R
+78e4c20f34b8bdf2096b9f5109d6dfc9 *R/misc.R
+b4975481b07f7be8a5eca5dcf8ed4354 *R/rbfDataGen.R
 c931debee85df5e9fb59d455bd8d01db *R/rndtrees.R
-bdf7c54a05ce4f4ccd89dddd51c9b30f *man/cleanData.Rd
+c1b3888149ddae1179ec480cef7e95ee *man/cleanData.Rd
 9b88ba6f6a1320267fb68853e06b556b *man/dataSimilarity.Rd
 ab9d2f139afd96f0a6a37120a23e5285 *man/dsClustCompare.Rd
-5245827e3c641cc307ac1ed5eaf87339 *man/newdata.Rd
+c61e09d6be2f215b78326732081835d8 *man/newdata.Rd
 9f94ba0daf2ebecb8a65c1cf4adb2847 *man/performanceCompare.Rd
-32018c2afe9543ebec0f4ecc02c6ff1c *man/rbfDataGen.Rd
+4c4a82edc979f3c89f389472380b4eb3 *man/rbfDataGen.Rd
 83787a6904502df64704a2c253f0c6ac *man/semiArtificial-package.Rd
 2d127294b4e1f6d749060b3cf8ef3bdc *man/treeEnsemble.Rd
