@@ -15,7 +15,7 @@ import(RSNNS)
 importFrom("flexclust", "comPart")
 importFrom(cluster, pam, daisy)
 importFrom(fpc, pamk)
-importFrom(CORElearn, CoreModel, modelEval,noEqualRows, destroyModels,attrEval,infoCore,predict.CoreModel)
+importFrom(CORElearn, CoreModel, modelEval,noEqualRows, destroyModels,attrEval,infoCore,predict.CoreModel,cvGen,cvGenStratified,gatherFromList)
 importFrom(MASS, mvrnorm)
 importFrom(nnet, which.is.max)
 importFrom(timeDate, skewness, kurtosis)
