@@ -24,7 +24,8 @@ cleanData(teObject, newdat, similarDropP=NA, dissimilarDropP=NA,
     The computed distance distributions are stored and returned as \code{cleaningObject} component of returned list. If it is provided on subsequent 
     calls, this reduces computational load.  }
   \item{newdat}{ A \code{data.frame} object with the (newly generated) data to be cleaned.}
-  \item{similarDropP}{With numeric parameters \code{similarDropP} and \code{dissimilarDropP} (with the default value NA and the valid value range in [0, 1]) one removes instances in \code{newdat}
+  \item{similarDropP}{With numeric parameters \code{similarDropP} and \code{dissimilarDropP} 
+  (with the default value NA and the valid value range in [0, 1]) one removes instances in \code{newdat}
    too close to generator's training instances or too far away from these instances. The distance distribution is computed based on instances stored in 
    \code{teObject}. For each instance in $teObject$ we store the distance to its \code{nearestInsK} nearest  instances
    (disregarding the identical instances). These distances are sorted and represent a distribution of nearest distances for all training instances.
@@ -35,8 +36,8 @@ cleanData(teObject, newdat, similarDropP=NA, dissimilarDropP=NA,
     \code{dissimilarDropP} above, 
    with  the \code{similarDropPclass} and \code{dissimilarDropPclass} (also in a [0, 1] range) we also removes instances in \code{newdat}
    too close to generator's training instances or too far away from these instances, but only taking near instances from the same class into account.
-   The \code{similarDropPclass} conatins either a single integer giving thresholds for all class values or a vector of thresholds, one for each class.
-   If the vector is of insufficient leght iit is replicated to the proper length using function \code{\link{rep}}.
+   The \code{similarDropPclass} contains either a single integer giving thresholds for all class values or a vector of thresholds, one for each class.
+   If the vector is of insufficient length it is replicated using function \code{\link{rep}}.
     The generated distance distributions are stored in the \code{cleaningObject} component of the returned list. }
     \item{dissimilarDropPclass}{See \code{similarDropPclass}.}
     \item{nearestInstK}{An integer with default value of 1, controls how many generator's training instances we take into account when computing 
@@ -44,7 +45,7 @@ cleanData(teObject, newdat, similarDropP=NA, dissimilarDropP=NA,
     \item{reassignResponse}{is a \code{logical} value controlling whether the response variable of the \code{newdat} shall be set anew 
     using a random forest prediction model or taken as it is. The default value \code{reassign=FALSE} means that values of response are not changed.}
     \item{cleaningObject}{ is a list object with a precomputed distance distributions and predictor from previous runs of the same function.
-    If provided this saves computation time.}
+    If provided, this saves computation time.}
  }
 \details{
    The function uses the training instances stored in the generator \code{teObject} to compute distribution of distances from instances to their 
@@ -84,7 +85,7 @@ summary(irisNewEns)
 clObj <- cleanData(irisEnsemble, irisNewEns, similarDropP=0.05, dissimilarDropP=0.95, 
                    similarDropPclass=0.05, dissimilarDropPclass=0.95, 
 		           nearestInstK=1, reassignResponse=FALSE, cleaningObject=NULL) 
-
+head(clObj$cleanData)
 }
 
 
